app/styles/_pipeline.less
@build-pipeline-border-color: #d1d1d1;

// Statuses
@build-pipeline-new-color: #bee1f4;
@build-pipeline-pending-color: #d1d1d1;
@build-pipeline-in-progress-color: #0088ce;
@build-pipeline-success-color: #3f9c35;
@build-pipeline-failed-color: #cc0000;
@build-pipeline-aborted-color: #e8e8e8;


@keyframes flexGrow {
  to {
    .flex-grow(@grow: 1);
    .flex-shrink(@shrink: 1);
    .flex-basis(@width: auto);
  }
}

@keyframes flexShrink {
  to {
    .flex-basis(@width: 1);
    .flex-grow(@grow: 0.000001);
    .flex-shrink(@shrink: 1);
  }
}

.pipeline-container {
  .flex(@columns: 1 1 auto);
  border: 1px solid @build-pipeline-border-color;
  overflow: hidden;
}
.pipeline {
  .flex-display(@display: flex);
  .flex-wrap(@wrap: wrap);
  height: 100%;
  .pipeline-stage {
    border-top: 1px solid @build-pipeline-border-color;
    margin: auto 0;
    min-width: 150px;
    max-width: 100%;
    padding: (@pipeline-margin /2) @pipeline-margin;
    &:first-child {
      border-top: 0;
    }
  }
}

.new-stage {
  .flex-basis(@width: 1);
  .flex-grow(@grow: 0.000001);
  .flex-shrink(@shrink: 1);
  animation: flexGrow 0.5s ease forwards;
}

.remove-stage {
  .flex(@columns: 1 1 0%);
  animation: flexShrink 0.5s ease forwards;
}

.pipeline-stage-name, .pipeline-time {
  font-size: (@font-size-base - 1);
  text-align: center;
}
.pipeline-stage-name {
  .truncate();
  line-height: initial;
  margin-bottom: @pipeline-margin + 5px;
  &.no-stages {
    margin: @pipeline-margin * 2.25;
  }
}
.pipeline-time {
  .text-muted();
  margin-top: 12px;
}

.build-summary, .stage {
  .text-center();
  min-width: 150px;
  .pipeline-link {
    .small();
    display: inline-block;
  }
  .pipeline-link + .pipeline-link:before {
    content: '';
    display: inline-block;
    border-left: 1px solid @build-pipeline-border-color;
    height: 10px;
    margin-right: 3px;
    margin: 0 5px 0 2px;
  }
}
.build-summary, .stages-block {
  border: 1px solid @build-pipeline-border-color;
}
.build-summary {
  border-bottom-width: 0;
  padding: 10px;
  .flex-direction(@direction: row);
  .flex-wrap(@wrap: wrap);
  .justify-content(@justify: space-around);
  .status-icon {
    &.Complete {
      color: @build-pipeline-success-color;
    }
    &.Failed{
      color: @build-pipeline-failed-color;
    }
  }
}

@media (min-width: @screen-xs-min) {
  .build-summary {
    border-bottom-width: 1px;
    border-right-width: 0;
    .flex-direction(@direction: column);
    .justify-content(@justify: center);
  }
}

@media (min-width: @screen-sm-min) {
  .pipeline {
    .pipeline-stage {
      border-top: 0;
      border-left: 1px solid @build-pipeline-border-color;
      // Prevent double borders when wrapping with -1px left margin.
      margin: 10px 0 10px -1px;
    }
  }
  .build-summary {
    border-right-width: 0;
    .flex(@columns: 0 0 200px);
    .flex-direction(@direction: column);
    min-height: 100px;
  }
}

@media (max-width: @screen-xs-max) {
  .pipeline {
    .flex-direction(@direction: column);
  }
}


// pipeline animation
// ------------------------------------

@pipeline-margin: 10px;
@progress-line: 100%;
@circle-diameter: 18px;
@line-border-width: 8px;
@line-height: (@line-border-width / 2);

@line-animation-time: 0.35s;
@circle-animation-time: 0.35s;

@inner-circle-color: #fff;

@circle-radius: (@circle-diameter / 2);
@semi-circle-animation-time: (@circle-animation-time / 2);
@circle-border-width: (@line-border-width / 2);

@keyframes progress-line {
	from {
		width: 0;
	}
	to {
		width: @progress-line;
	}
}
@keyframes progress {
	from {
		-webkit-transform: rotate(0);
		transform: rotate(0);
	}
	to {
		-webkit-transform: rotate(180deg);
		transform: rotate(180deg);
	}
}
@keyframes fadeIn {
	from {
		opacity: 0;

	}
	to {
		opacity: 1;
	}
}
@keyframes fadeOut {
	from {
		background-color: @build-pipeline-pending-color;
	}
	to {
		background-color: transparent;
	}
}

// Shared by both the build pipeline and overview pipeline.
.pipeline-status-bar  {
  .pipeline-line:before,
  .clip1:before,
  .clip2:before {
    background-color: @build-pipeline-pending-color;
  }
  .inner-circle-fill {
    background-color: @inner-circle-color;
    opacity: 0;
  }
}
.pipeline-status-bar.SUCCESS  {
  .pipeline-line:before,
  .clip1:before,
  .clip2:before,
  .inner-circle-fill {
    background-color: @build-pipeline-success-color;
  }
  .pipeline-circle {
    &:after {
      content: "\f00c";
    }
  }
}

.pipeline-status-bar.FAILED  {
  .pipeline-line:before,
  .clip1:before,
  .clip2:before,
  .inner-circle-fill {
    background-color: @build-pipeline-failed-color;
  }
  .pipeline-circle {
    &:after {
      content: "\f00d";
    }
  }
}

.pipeline-status-bar.IN_PROGRESS  {
  .pipeline-line:before,
  .clip1:before,
  .clip2:before,
  .inner-circle-fill {
    background-color: @build-pipeline-in-progress-color;
  }
  .pipeline-circle {
    &:after {
      content: "\f021";
    }
  }
}

.pipeline-status-bar.NOT_EXECUTED  {
  .pipeline-line:before,
  .clip1:before,
  .clip2:before,
  .inner-circle-fill {
    background-color: @build-pipeline-pending-color;
  }
  .pipeline-circle {
    &:after {
      content: ""; // no icon
    }
  }
}

.pipeline-status-bar.PAUSED_PENDING_INPUT  {
  .pipeline-circle {
    &:after {
      content: "\f04c";
      font-size: 10px;
    }
  }
}


.pipeline-status-bar.ABORTED  {
  .pipeline-line:before,
  .clip1:before,
  .clip2:before,
  .inner-circle-fill {
    background-color: @build-pipeline-aborted-color;
  }
  .pipeline-circle {
    &:after {
      content: "\f05e";
    }
  }
}

.pipeline-status-bar {
  .flex-display(@display: flex);
  .align-items(@align: center);
  .flex-direction(@direction: column);
  margin-bottom: -(@circle-diameter / 2);
  .pipeline-line {
    width: @progress-line;
    height: @line-height;
    background: @build-pipeline-pending-color;
    position: relative;
    &:before {
      content: '';
      position: absolute;
      height: 100%;
      animation: progress-line @line-animation-time ease-in forwards;
    }
  }
}
.pipeline-circle {
  background: @build-pipeline-pending-color;
  width: @circle-diameter;
  height: @circle-diameter;
  border-radius: @circle-radius;
  margin-top: (-(@circle-diameter / 2) - (@line-height / 2));
  position: relative;
  transform: rotate(-90deg);
  animation: fadeOut 0.1s (@line-animation-time + @circle-animation-time) linear forwards;
  &:after {
    position: absolute;
    color: @inner-circle-color;
    font-family: 'FontAwesome';
    font-size: (@font-size-base - 1);
    transform: translate(-50%, -50%) rotate(90deg);
    top: 50%;
    left: 50%;
    opacity: 0;
    animation: fadeIn .1s linear forwards;
    animation-delay: .5s;
  }
  .clip1 {
    position: absolute;
    clip: rect(0, @circle-diameter, @circle-diameter, @circle-radius);
    z-index: -9;
    &:before {
      content: '';
      position: absolute;
      width: @circle-diameter;
      height: @circle-diameter;
      clip: rect(0, @circle-radius, @circle-diameter, 0);
      border-radius: @circle-radius;
      transform: rotate(360deg);
      animation: progress @semi-circle-animation-time @line-animation-time linear forwards;
    }
  }
  .clip2 {
    position: absolute;
    clip: rect(0, @circle-radius, @circle-diameter, 0);
    z-index: -9;
    &:before {
      content: '';
      position: absolute;
      width: @circle-diameter;
      height: @circle-diameter;
      clip: rect(0, @circle-diameter, @circle-diameter, @circle-radius);
      border-radius: @circle-radius;
      transform: rotate(360deg);
      animation: progress @semi-circle-animation-time (@semi-circle-animation-time + @line-animation-time) linear forwards;
    }
  }
  .inner-circle {
    height: (@circle-diameter - @circle-border-width * 2);
    width: (@circle-diameter - @circle-border-width * 2);
    border-radius: @circle-radius;
    background-color: @inner-circle-color;
    position: absolute;
    top: @circle-border-width;
    left: @circle-border-width;
    animation: fadeOut 0.1s (@line-animation-time + @circle-animation-time) linear forwards;
    .inner-circle-fill {
      box-sizing: border-box;
      height: 100%;
      width: 100%;
      border-radius: 50%;
      opacity: 0;
    }
  }
}

// Condensed Pipeline on Overview
// ------------------------------

.overview-pipeline {
  .pipeline-status-bar {
    display: inline-block;
    .pipeline-circle {
      margin: 3px;
      &:after {
        animation-delay: 0;
      }
    }
    .pipeline-line {
      display: none;
    }
  }
  .stage {
    min-width: initial;
  }
}


// Current build stage
// -------------------

@build-rail-bgcolor: #d6d6d6;
@build-bar-bgcolor: #00a8e1;
@build-rail-height: 4px;
@build-rail-width: 100%;
@build-bar-width: 50px;
@build-circle-bgcolor: #fff;
@build-circle-color: #666;
@build-circle-border: #d6d6d6;

.build-stage-animation {
  width: @build-rail-width;
  padding-top: 8px;
  padding-left: 5px;
  position: relative;
  .flex-display(@display: flex);
  .flex-direction(@direction: column);
  .justify-content(@justify: center);
  .align-items(@align: center);
  .build-rail {
    width: @build-rail-width;
    background: @build-rail-bgcolor;
    height: @build-rail-height;
    margin-bottom: -13px;
    position:relative;
    overflow:hidden;
      .build-bar {
        width: @build-bar-width;
        position: absolute;
        height: @build-rail-height;
        background: @build-bar-bgcolor;
        animation: slide 7s linear infinite;
      }
  }
  .build-circle {
    border: 1px solid @build-circle-border;
    background: @build-circle-bgcolor;
    width: 22px;
    height: 22px;
    border-radius: 22px;
    .flex-display(@display: flex);
    .flex-direction(@direction: column);
    .justify-content(@justify: center);
    .align-items(@align: center);
    z-index: 1;
    .build-time {
      color: @build-circle-color;
      font-size: 10px;
    }
  }
}

@keyframes slide {
  0% {
    left: -@build-bar-width;
  }
  100% {
    left: 100%;
  }
}

